--- a/about.html
+++ b/about.html
@@ -53,8 +53,8 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="about.html" class="nav-item nav-link">Visi & Misi</a>
-                <a href="courses.html" class="nav-item nav-link">Fasilitas</a>
-                <a href="contact.html" class="nav-item nav-link">Kontak Kami</a>
+                <a href="courses.html" class="nav-item nav-link">Kegiatan</a>
+                <!-- <a href="contact.html" class="nav-item nav-link">Kontak Kami</a> -->
             </div>
             <!-- <a href="https://manahilulirfan.dayah.id/" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Join Now<i class="fa fa-arrow-right ms-3"></i></a> -->
         </div>
@@ -273,16 +273,20 @@
                 <a class="btn btn-link" href="">Terms & Condition</a>
                 <a class="btn btn-link" href="">FAQs & Help</a>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-6 col-md-6">
                 <h4 class="text-white mb-3">Contact</h4>
-                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3">
+                </i>Jalan Pertamina Hulu Energi, Cluster III, 
+                    Gampong Parang Sikureung, 
+                    Kecamatan Matangkuli, Kabupaten Aceh Utara, Provinsi Aceh</p>
+                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+62 852-1314-4254</p>
+                <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@pesantrenmanahilulirfan</p>
                 <div class="d-flex pt-2">
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="https://twitter.com/irfanpesantren"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/pesantrenmanahilulirfan/"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="https://www.youtube.com/@mahirtv9091"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/pesantrenmanahilulirfan/"><i class="fab fa-instagram"></i></a>
+                    <!-- <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a> -->
                 </div>
             </div>
             <!-- <div class="col-lg-3 col-md-6">
